# Aegis

./: AEGIS_PROTOCOL.md  Cargo.toml  README.md  ROADMAP.md  SECURITY_AUDIT.md
.github/workflows/: ci.yml
app/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
app/lib/: background.dart  biometrics.dart  brand.dart  config.dart  device_integrity.dart  disguise.dart  engine.dart  main.dart  notifications.dart  screen_security.dart  secure_store.dart  share.dart  theme.dart  updater.dart  widgets.dart
app/lib/screens/: add_contact.dart  chat.dart  chats.dart  identity.dart  lock.dart  nodes.dart  notes.dart  onboarding.dart  proxy.dart  search.dart  settings.dart
app/rust/: Cargo.toml
app/rust/src/: lib.rs
app/rust/src/api/: aegis.rs  mod.rs
crates/aegis-api/: Cargo.toml
crates/aegis-api/examples/: live_message.rs  net_selftest.rs
crates/aegis-api/src/: lib.rs  vault.rs  wire.rs
crates/aegis-api/tests/: mixnet.rs
crates/aegis-client/: Cargo.toml
crates/aegis-client/src/: lib.rs  wire.rs
crates/aegis-crypto/: Cargo.toml
crates/aegis-crypto/src/: hmac.rs  lib.rs  ml_dsa.rs  ml_kem.rs  mnemonic.rs  rand.rs  x25519.rs  zeroize.rs
crates/aegis-identity/: Cargo.toml
crates/aegis-identity/src/: identity.rs  lib.rs  stealth.rs
crates/aegis-identity/src/crypto/: hmac.rs  mod.rs  rand.rs  sha256.rs  x25519.rs  zeroize.rs
crates/aegis-mailbox/: Cargo.toml
crates/aegis-mailbox/src/: lib.rs
crates/aegis-mailbox/tests/: end_to_end.rs
crates/aegis-mix/: Cargo.toml
crates/aegis-mix/src/: lib.rs
crates/aegis-net/: Cargo.toml
crates/aegis-net/src/: lib.rs  loopix.rs  rng.rs
crates/aegis-relay/: Cargo.toml
crates/aegis-relay-server/: Cargo.toml
crates/aegis-relay-server/src/: main.rs
crates/aegis-relay/src/: lib.rs
crates/aegis-relay/tests/: live_relay.rs
crates/aegis-session/: Cargo.toml
crates/aegis-session/src/: bundle.rs  lib.rs  pqxdh.rs  ratchet.rs
crates/aegis-session/tests/: authenticity.rs
deploy/: Dockerfile  README.md  aegis-node.service  build-apk.sh  docker-compose.yml  install.sh
docs/: CRYPTO_MATH.md
