[workspace]
resolver = "2"
members = [
    "crates/aegis-crypto",
    "crates/aegis-identity",
    "crates/aegis-session",
    "crates/aegis-mailbox",
    "crates/aegis-net",
    "crates/aegis-client",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/monxley/Aegis"
