[package]
name = "aegis-api"
description = "App-facing Aegis engine: identity, contacts, conversations — the API a UI (Flutter via flutter_rust_bridge) binds to"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aegis-client = { path = "../aegis-client" }
aegis-identity = { path = "../aegis-identity" }
aegis-session = { path = "../aegis-session" }
aegis-mailbox = { path = "../aegis-mailbox" }
aegis-relay = { path = "../aegis-relay" }
aegis-crypto = { path = "../aegis-crypto" }

[dev-dependencies]
# For the `live_message` example: run a Ciphra blind server in-process so the
# demo sends a real message over a real relay.
ciphra-net = { git = "https://github.com/monxley/ciphra", rev = "981e29cef84cb04a1fe05c49b98a04375c2b1ca5" }
ciphra-storage = { git = "https://github.com/monxley/ciphra", rev = "981e29cef84cb04a1fe05c49b98a04375c2b1ca5" }
