[package]
name = "aegis-api"
description = "App-facing Aegis engine: identity, contacts, conversations — the API a UI (Flutter via flutter_rust_bridge) binds to"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aegis-client = { path = "../aegis-client" }
aegis-identity = { path = "../aegis-identity" }
aegis-session = { path = "../aegis-session" }
aegis-mailbox = { path = "../aegis-mailbox" }
aegis-relay = { path = "../aegis-relay" }
aegis-mix = { path = "../aegis-mix" }
aegis-crypto = { path = "../aegis-crypto" }

[dev-dependencies]
# For the `live_message` example and the mixnet integration test: run a Ciphra
# blind server + mix nodes in-process so sends go over a real network.
aegis-net = { path = "../aegis-net" }
ciphra-net = { git = "https://github.com/monxley/ciphra", rev = "8c44682e28441fa0be0895a2af529f5150b8bfeb" }
ciphra-storage = { git = "https://github.com/monxley/ciphra", rev = "8c44682e28441fa0be0895a2af529f5150b8bfeb" }
