[package]
name = "aegis-relay-server"
description = "Run your own Aegis relay: a Ciphra blind server that stores sealed envelopes it can neither read nor attribute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aegis-relay-server"
path = "src/main.rs"

[dependencies]
# The relay IS a Ciphra blind server. We reuse Ciphra's networked store,
# on-disk storage, and static transport identity — nothing new is invented.
ciphra-net = { git = "https://github.com/monxley/ciphra", rev = "aa29899bc20b490ad9d3110e52d1200345f9f461" }
ciphra-storage = { git = "https://github.com/monxley/ciphra", rev = "aa29899bc20b490ad9d3110e52d1200345f9f461" }
ciphra-crypto = { git = "https://github.com/monxley/ciphra", rev = "aa29899bc20b490ad9d3110e52d1200345f9f461" }
# For --mix mode: also run a Sphinx mix + directory node in the same process.
aegis-mix = { path = "../aegis-mix" }
aegis-net = { path = "../aegis-net" }
aegis-relay = { path = "../aegis-relay" }
aegis-crypto = { path = "../aegis-crypto" }
