[package]
name = "aegis-session"
description = "Aegis session setup (PQXDH) and message encryption (post-quantum Double Ratchet) — Phase 1"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }
