[package]
name = "aegis-session"
description = "Aegis session setup (PQXDH) and message encryption (post-quantum Double Ratchet) — Phase 1"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }

[dev-dependencies]
# Used only by integration tests that exercise the full authenticity chain
# (Aegis ID ↔ bundle signing key). Not a runtime dependency.
aegis-identity = { path = "../aegis-identity" }
